poke/testsuite/poke.pkl/struct-method-diag-14.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    int foo;

    deftype Bar =
      struct
      {
        method bar = void:
        {
          foo; /* { dg-error "field.*not in this struct" } */
        }
      };
  };
